# lakeglider

./: .bazelrc  .clangd  .gitignore  MODULE.bazel  README.md
com/bus/: BUILD  Client.cc  Client.hh  Server.cc  Server.hh  can_bridge_main.cc  server_main.cc
com/msg/: BUILD  Battery.hh  Compass.hh  Depth.hh  Handler.cc  Handler.hh  Header.hh  Imu.hh  Msg.cc  Msg.hh  Subscriptions.hh  Timesync.hh  Type.hh  utils.hh
hw/: BUILD  Pins.hh  Test.cc
hw/actuators/: BUILD  EqiUartMg1.cc  EqiUartMg1.hh  Pump.cc  Pump.hh  Tmc5160.cc  Tmc5160.hh  Valve.cc  Valve.hh
hw/interfaces/: BUILD  IAdc.hh  IGpio.hh  II2c.hh  ISpi.hh  IUart.hh
hw/interfaces/drivers/: BUILD  CanManager.cc  CanManager.hh  Mcp2515.cc  Mcp2515.hh
hw/interfaces/mock/: AdcMock.cc  AdcMock.hh  BUILD  I2cMock.cc  I2cMock.hh
hw/interfaces/pico/: AdcPico.cc  AdcPico.hh  BUILD  GpioPico.cc  GpioPico.hh  I2cPico.cc  I2cPico.hh  SpiPico.cc  SpiPico.hh  UartPico.cc  UartPico.hh
hw/interfaces/rpi/: BUILD  SpiRpi.cc  SpiRpi.hh
hw/sensors/: BUILD  Battery.cc  Battery.hh  Mpu9250.cc  Mpu9250.hh  Ms5837.cc  Ms5837.hh  Potentiometer.cc  Potentiometer.hh
hw/sensors/test/: BUILD  battery_test.cc
pico/: BUILD  hw_test_actuators.cc  hw_test_com.cc  hw_test_sensors.cc  sensor_board_main.cc
utils/: BUILD  Consts.hh  GlTime.hh  constants.hh
utils/logging/: BUILD  logger.cc  logger.hh
utils/time/: BUILD  GlTime.hh  IClock.hh  ITimeProvider.hh  LinuxClock.cc  LinuxClock.hh  LinuxTimeProvider.cc  LinuxTimeProvider.hh  LoopTimer.cc  LoopTimer.hh  PicoClock.cc  PicoClock.hh  PicoTimeProvider.cc  PicoTimeProvider.hh  Time.hh  TimeSynchronizer.cc  TimeSynchronizer.hh
