"""Lake Glider Bazel module definition."""

module(
    name = "lake_glider",
    version = "0.0.1",
)

bazel_dep(name = "rules_cc", version = "0.1.2")
bazel_dep(name = "googletest", version = "1.17.0")

bazel_dep(name = "pico-sdk", version = "2.1.1")
register_toolchains(
    "@pico-sdk//bazel/toolchain:linux-x86_64-rp2350",
    "@pico-sdk//bazel/toolchain:mac-x86_64-rp2350",
)
