"""Lake Glider Bazel module definition."""

module(
    name = "lake_glider",
    version = "0.0.1",
)

bazel_dep(name = "googletest", version = "1.17.0")

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)

bazel_dep(name = "gflags", version = "2.2.2")
bazel_dep(name = "pico-sdk", version = "2.2.2-develop.bcr.20260105-1cc19a21")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "toolchains_llvm", version = "1.6.0")
bazel_dep(name = "spdlog", version = "1.17.0")

# Compile commands
git_override(
    module_name = "hedron_compile_commands",
    commit = "0e990032f3c5a866e72615cf67e5ce22186dcb97",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)

# Toolchains
new_local_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:local.bzl", "new_local_repository")

new_local_repository(
    name = "rpi_sysroot",
    build_file_content = "filegroup(name = 'files', srcs = glob(['**']), visibility = ['//visibility:public'])",
    path = "rpi_sysroot",
)

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    name = "llvm_toolchain",
    llvm_version = "17.0.6",
)
llvm.sysroot(
    name = "llvm_toolchain",
    label = "@rpi_sysroot//:files",
    targets = ["linux-aarch64"],
)
use_repo(llvm, "llvm_toolchain")

register_toolchains(
    "@pico-sdk//bazel/toolchain:linux-x86_64-rp2350",
    "@pico-sdk//bazel/toolchain:mac-x86_64-rp2350",
    "@pico-sdk//bazel/toolchain:mac-aarch64-rp2350",
    "@llvm_toolchain//:cc-toolchain-aarch64-linux",
)
